fixed font rendering for the ampersand on Firefox by giving it a backup

--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -6,7 +6,7 @@
 @font-face {
     /* Ampersand fallback font */
     font-family: 'Ampersand';
-    src: local('Arial');
+    src: local('Alegreya Sans SC Black'), local('AlegreyaSansSC-Black'), url(http://themes.googleusercontent.com/static/fonts/alegreyasanssc/v1/AjAmkoP1y0Vaad0UPPR462eUmuPaexXbuJ2iMbM_ZTs.woff) format('woff');
     unicode-range: U+270C;
 }
 
